--- a/murderousduck/fetch/localization/eng/FetchCardStrings.json
+++ b/murderousduck/fetch/localization/eng/FetchCardStrings.json
@@ -1,7 +1,7 @@
 {
   "All For One": {
     "NAME": "All for One",
-    "DESCRIPTION": "Deal !D! damage. Fetch all 0 cost cards from your discard pile"
+    "DESCRIPTION": "Deal !D! damage. Fetch all 0 cost cards from your discard pile."
   },
 	"Hologram": {
     "NAME": "Hologram",
